@@ -1,6 +1,9 @@
 v3.9.0 (XXXX-XX-XX)
 -------------------
 
+* Removed an invalid assertion that could be triggered during chaos testing in
+  maintainer mode.
+
 * APM-187: The "Rebalance Shards" button now is displayed in a new tab, and it
   is displayed for any database in cluster mode. There is also a new flag for
   arangod, `--cluster.max-number-of-move-shards` (default = 10), which limits
